# docs/swagger.json
@@ -469,13 +469,22 @@
                 }
             }
         },
-        "/ql": {
+        "/ql/{id}": {
             "get": {
                 "description": "List of cats",
                 "tags": [
                     "spycat"
                 ],
                 "summary": "List of cats",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Cat ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -755,6 +764,7 @@
         "main.Target": {
             "type": "object",
             "required": [
+                "complete",
                 "country",
                 "name",
                 "notes"
